# text-query

./: .env-example  .gitignore  ABCC11_microbiome_query_results.md  CLAUDE.md  MANIFEST.in  README.md  README.md.1  SETUP_GUIDE.md  build.py  graphdb.py  ingest_MOKG.py  mcps.py  meta_knowledge_graph  neuroinflammation_query.py  neuroinflammation_results.md  pyproject.toml
.claude/skills/explore-connections/: SKILL.md
.claude/skills/resolve-entity/: SKILL.md
.claude/skills/translator-query/: SKILL.md
.github/workflows/: weekly-usage-report.yml
.mcps/: mbkg.py  mesh.py  mokg.py
.neo4j/conf/: neo4j.conf
.sqlite3/: mesh.sqlite3
lib/unnamed/: agents.py  enums.py  llms.py  mcps.py  models.py  prompts.py  subagents.py
nix/: shell.nix
scripts/: vertex_usage.py
src/: server.py
